--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "node_modules/mongoose",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sendgrid": "^1.9.2"
   }
 }
